--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,16 +1,40 @@
-
 <!doctype html>
-
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>Home Page</title>
-		<meta name="description" content="form to add new books">
-		<meta name="author" content="Mark Tyers">
-		<link href="style.css" type="text/css" rel="stylesheet" />
-	</head>
-	<body>
-		<h1>Home</h1>
-		<p>This is a secure page. Users need to have a valid account and be logged in to see it.</p>
-		<p><a href="/logout">log out</a></p>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Dashboard</title>
+    <meta name="description" content="form to add new books">
+    <meta name="author" content="Mark Tyers">
+    <link href="style.css" type="text/css" rel="stylesheet"/>
+</head>
+<body>
+<nav class="navbar">
+    <div class="container nav-container">
+        <a class="nav-title" href="/">Domestic Repair</a>
+        <ul>
+            <li>
+                Username
+            </li>
+            <a href="/logout">
+                <li>
+                    Logout
+                </li>
+            </a>
+        </ul>
+    </div>
+</nav>
+<div class="container">
+    {{#if success}}
+        <p class="success">{{success}}</p>
+    {{/if}}
+    {{#if error}}
+        <p class="error">{{error}}</p>
+    {{/if}}
+    <h1>Home</h1>
+    <p>This is a secure page. Users need to have a valid account and be logged in to see it.</p>
+</div>
+</body>
 </html>
