--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,21 +1,36 @@
-
 <!doctype html>
-
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>Create an Account</title>
-		<meta name="description" content="form to add new books">
-		<meta name="author" content="Mark Tyers">
-		<link href="style.css" type="text/css" rel="stylesheet" />
-	</head>
-	<body>
-		<h1>Create an Account</h1>
-		<form action="/register" enctype="multipart/form-data" method="post">
-			<p>Username:<br /><input type="text" name="user" placeholder="your preferred username (no spaces)" value=""></p>
-            <p>Password:<br /><input type="password" name="pass" placeholder="your chosen password" value=""></p>
-			<p>Profile Picture:<br /><input type="file" name="avatar"></p>
-			<p><input type="submit" value="Create"></p>
-		</form>
-	</body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Register</title>
+    <meta name="description" content="form to add new books">
+    <meta name="author" content="Mark Tyers">
+    <link href="style.css" type="text/css" rel="stylesheet"/>
+</head>
+<body>
+<div class="container">
+    <form action="/register" enctype="multipart/form-data" method="post" class="user-form">
+        <p class="form-title">Register</p>
+        <div class="form-group">
+            <label for="user">Username</label>
+            <input type="text" name="user"/>
+        </div>
+        <div class="form-group">
+            <label for="pass">Password</label>
+            <input type="password" name="pass"/>
+        </div>
+        <div class="form-group">
+            <label for="avatar">Profile Picture</label>
+            <input type="file" name="avatar"/>
+        </div>
+        <div class="form-group">
+            <input type="submit" value="Register">
+        </div>
+        <p class="form-redirector">Already have an account? <a href="/login">Login</a></p>
+    </form>
+</div>
+</body>
 </html>
