getting and displaying loged in user

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,10 +5,10 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="Something went wrong">
+    <meta name="author" content="Deyan Bozhilov">
     <title>Dashboard</title>
-    <meta name="description" content="form to add new books">
-    <meta name="author" content="Mark Tyers">
-    <link href="style.css" type="text/css" rel="stylesheet"/>
+    <link href="./style.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
 <nav class="navbar">
@@ -16,7 +16,7 @@
         <a class="nav-title" href="/">Domestic Repair</a>
         <ul>
             <li>
-                Username
+                Hi, {{user.user}}
             </li>
             <a href="/logout">
                 <li>
