--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -6,9 +6,9 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Login</title>
-    <meta name="description" content="form to add new books">
-    <meta name="author" content="Mark Tyers">
-    <link href="style.css" type="text/css" rel="stylesheet"/>
+    <meta name="description" content="Login page">
+    <meta name="author" content="Deyan Bozhilov">
+    <link href="./style.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
 <div class="container">
