--- a/views/report.handlebars
+++ b/views/report.handlebars
@@ -5,13 +5,12 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="Something went wrong">
+    <title>Add Report</title>
+    <meta name="description" content="Register page">
     <meta name="author" content="Deyan Bozhilov">
-    <title>Error</title>
     <link href="./style.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
-    <h1>An Error Has Occurred</h1>
-    <h2>{{message}}</h2>
+
 </body>
 </html>
