users can report jobs, see only their own,technicians can see all jobs and mark as completed

--- a/views/tech_add.handlebars
+++ b/views/tech_add.handlebars
@@ -16,11 +16,11 @@
         <p class="form-title">Register Technician</p>
         <div class="form-group">
             <label for="user">Username</label>
-            <input type="text" name="user"/>
+            <input id="user" type="text" name="user"/>
         </div>
         <div class="form-group">
             <label for="pass">Password</label>
-            <input type="password" name="pass"/>
+            <input id="pass" type="password" name="pass"/>
         </div>
         <div class="form-group">
             <input type="submit" value="Register">
