--- a/public/style.css
+++ b/public/style.css
@@ -1,31 +1,41 @@
+:root {
+    --primary-bg: #0074D9;
+    --secondary-bg: #33a8fc;
+    --primary-font: #333;
+    --secondary-font: #545454;
+}
+
 html {
     font-size: 14px;
 }
 
 * {
     box-sizing: border-box;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 body {
     font-family: sans-serif;
-    background: #eee;
+    background: #f1f1f1;
     margin: 0;
+    color: var(--primary-font);
 }
 
-.badge{
+.badge {
     font-size: 0.8rem;
     padding: 0.5rem 0.75rem;
     margin: 0 1rem;
-    background: rgba(0,0,0,0.2);
+    background: rgba(0, 0, 0, 0.2);
     border-radius: 0.5rem;
 }
 
 .error {
     padding: 1rem;
-    background: rgba(255, 0, 0, 0.1);
-    border: 1px solid rgba(255, 0, 0, 0.5);
+    background: rgba(150, 0, 0, 0.1);
+    border: 1px solid rgba(150, 0, 0, 0.5);
     border-radius: 5px;
-    color: rgba(255, 0, 0, 0.9);
+    color: rgba(150, 0, 0, 0.9);
     font-weight: 600;
     text-transform: uppercase;
     text-align: center;
@@ -33,17 +43,17 @@ body {
 
 .success {
     padding: 1rem;
-    background: rgba(0, 200, 0, 0.1);
-    border: 1px solid rgba(0, 200, 0, 0.5);
+    background: rgba(0, 150, 0, 0.1);
+    border: 1px solid rgba(0, 150, 0, 0.5);
     border-radius: 5px;
-    color: rgba(0, 200, 0, 0.9);
+    color: rgba(0, 150, 0, 0.9);
     font-weight: 600;
     text-transform: uppercase;
     text-align: center;
 }
 
 .navbar {
-    background: #0074D9;
+    background: var(--primary-bg);
     color: #fff;
 }
 
@@ -84,6 +94,30 @@ body {
     background: rgba(0, 0, 0, 0.15);
 }
 
+.hero-section {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+.hero-section .title {
+    flex: 1;
+}
+
+.hero-section button {
+    background: rgba(0, 175, 0, 1);
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    padding: 0.5rem 0.75rem;
+    flex: 0 0 9rem;
+    cursor: pointer;
+}
+
+.hero-section button i {
+    padding: 0 0.5rem 0 0;
+}
+
 .container {
     max-width: 1140px;
     min-width: 0;
@@ -91,6 +125,8 @@ body {
     margin: 0 auto;
     padding: 0 1rem;
 }
+
+/*USER FORM*/
 
 .user-form {
     max-width: 360px;
@@ -133,7 +169,7 @@ body {
 }
 
 .user-form .form-group input[type="submit"] {
-    background: #33a8fc;
+    background: var(--secondary-bg);
     border: none;
     color: #fff;
     padding: 0.75rem;
@@ -147,7 +183,7 @@ body {
 
 .user-form .form-group input:focus {
     outline: 0;
-    border: 1px solid #33a8fc;
+    border: 1px solid var(--secondary-bg);
 }
 
 .user-form .form-redirector {
@@ -157,8 +193,301 @@ body {
 .user-form .form-redirector a {
     text-decoration: none;
     font-weight: 600;
-    color: #33a8fc;
+    color: var(--secondary-bg);
 }
+
+/*JOB DASHBOARD*/
+
+.job-list {
+    box-shadow: 0 2px 10px -2px rgba(0, 0, 0, 0.05);
+    border-radius: 5px;
+    border: 1px solid #eee;
+    padding: 0 2rem 2rem 2rem;
+    background: #fff;
+}
+
+.job-list-title {
+    text-align: center;
+    font-size: 1.3rem;
+    text-transform: capitalize;
+    font-weight: 600;
+    color: var(--secondary-font);
+}
+
+.job-item {
+    border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+    padding: 0 1rem;
+    display: flex;
+    align-items: center;
+}
+
+.job-item:last-child {
+    border-bottom: none;
+}
+
+.job-item .job-status{
+    padding: 0 0.75rem 0 0;
+    display: flex;
+    align-items: center;
+}
+
+.job-item .job-status i{
+    padding: 0 0.5rem;
+}
+
+.job-item a {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 100%;
+    text-decoration: none;
+    padding: 1rem 0;
+}
+
+.job-item .completed{
+    background: none;
+    border: none;
+    display: flex;
+    align-items: center;
+}
+
+.job-item .completed:focus {
+    outline: none;
+}
+
+.job-item .completed i {
+    padding: 0 0 0 0.5rem;
+    color: rgba(0, 150, 0, 0.9);
+}
+
+.job-item .completed a i {
+    padding: 0 0 0 0.5rem;
+    color: rgba(150, 0, 0, 0.9);
+}
+
+.job-item a span {
+    flex: 1;
+    color: var(--primary-font);
+    max-width: 100vw;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.job-item a small {
+    padding: 0.5rem;
+    background: rgba(0, 0, 0, 0.075);
+    border-radius: 5px;
+    margin: 0 0 0 1rem;
+}
+
+.job-item a small span {
+    color: var(--secondary-font);
+    font-size: 0.75rem;
+}
+
+.job-item:hover {
+    background: rgba(51, 168, 252, 0.05);
+}
+
+/*JOB DETAILS*/
+.go-back{
+    text-decoration: none;
+}
+
+.go-back button {
+    margin: 1rem 0;
+    padding: 0.5rem 0.75rem;
+    background: rgba(0, 0, 0, 0.15);
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.text-green{
+    color: #008800;
+}
+
+.text-red{
+    color: #C21F39;
+}
+
+.mark-completed{
+    text-decoration: none;
+}
+
+.mark-completed button {
+    margin: 1rem 0;
+    padding: 0.5rem 0.75rem;
+    background: rgba(0, 0, 0, 0.15);
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.job-details {
+    background: #fff;
+    padding: 1rem 2rem;
+    box-shadow: 0 3px 10px -2px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    border-radius: 5px;
+}
+
+.keywords {
+    padding: 0.5rem 0;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    display: flex;
+    align-items: center;
+}
+
+.keywords span {
+    display: flex;
+    align-items: center;
+    margin: 0 1rem 0 0;
+}
+
+.keywords span .tag {
+    background: var(--secondary-bg);
+    color: #fff;
+    padding: 0.25rem 0.5rem;
+    font-size: 0.9rem;
+    border-radius: 5px;
+    font-weight: 600;
+    margin: 0 0 0 0.5rem;
+}
+
+.created {
+    padding: 0 0 1rem 0;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.created .secondary {
+    font-style: italic;
+    font-weight: 600;
+    color: rgba(0, 0, 0, 0.5);
+}
+
+.job-desc p {
+    font-size: 1.1rem;
+}
+
+/*MODAL FORM*/
+
+.modal-overlay {
+    z-index: 9999;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.2);
+    opacity: 0;
+    pointer-events: none;
+}
+
+.modal-overlay.show {
+    opacity: 1;
+    pointer-events: auto;
+}
+
+.modal-window {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    min-width: 0;
+    max-width: 30rem;
+    width: 100%;
+    background: white;
+    border-radius: 5px;
+    box-shadow: 0 5px 10px -3px rgba(0, 0, 0, 0.5);
+    overflow: hidden;
+}
+
+.modal-header {
+    display: flex;
+    align-items: center;
+    padding: 1rem;
+    background: var(--primary-bg);
+}
+
+.modal-header-title {
+    flex: 1;
+    margin: 0;
+    color: #fff;
+    font-weight: 600;
+}
+
+.close {
+    background: none;
+    border: none;
+    color: #fff;
+    cursor: pointer;
+}
+
+.modal-body {
+    padding: 2rem;
+    max-height: 80vh;
+    overflow: hidden;
+    overflow-y: auto;
+}
+
+.modal-form-group {
+    padding: 0.5rem;
+}
+
+.modal-form-group label {
+    width: 100%;
+    font-weight: 400;
+    font-size: 0.9rem;
+    display: block;
+    margin: 0 0 0.2rem 0;
+}
+
+.modal-form-group select {
+    max-width: 350px;
+    min-width: 0;
+    width: 100%;
+    padding: 0.5rem 0;
+    text-indent: 1rem;
+    border: 1px solid #d1d1d1;
+    border-radius: 5px;
+}
+
+.modal-form-group select:focus {
+    outline: 0;
+    border: 1px solid var(--secondary-bg);
+}
+
+.modal-form-group textarea {
+    max-width: 350px;
+    min-width: 0;
+    width: 100%;
+    padding: 0.5rem 0;
+    text-indent: 1rem;
+    border: 1px solid #d1d1d1;
+    border-radius: 5px;
+    resize: none;
+    height: 200px;
+}
+
+.modal-form-group textarea:focus {
+    outline: 0;
+    border: 1px solid var(--secondary-bg);
+}
+
+.modal-form-group input[type="submit"] {
+    max-width: 350px;
+    min-width: 0;
+    width: 100%;
+    text-indent: 1rem;
+    border-radius: 5px;
+    background: var(--secondary-bg);
+    border: none;
+    color: #fff;
+    padding: 0.75rem;
+    cursor: pointer;
+}
+
 
 @media (max-width: 991px) {
     .container {
