--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,6 +8,7 @@
     <meta name="description" content="Something went wrong">
     <meta name="author" content="Deyan Bozhilov">
     <title>Dashboard</title>
+    <script src="https://kit.fontawesome.com/0782d985f5.js" crossorigin="anonymous"></script>
     <link href="./style.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
@@ -20,7 +21,7 @@
             </li>
             <a href="/logout">
                 <li>
-                    Logout
+                    <i class="fas fa-sign-out-alt"></i> Logout
                 </li>
             </a>
         </ul>
@@ -33,8 +34,80 @@
     {{#if error}}
         <p class="error">{{error}}</p>
     {{/if}}
-    <h1>Home</h1>
-    <p>This is a secure page. Users need to have a valid account and be logged in to see it.</p>
+    <div class="hero-section">
+        <h2 class="title">Dashboard</h2>
+        <button id="add-report"><i class="fas fa-file-medical-alt"></i> Add Report</button>
+    </div>
+    <div class="job-list">
+        <p class="job-list-title"><i class="fas fa-clipboard-list"></i> your jobs</p>
+        {{#each userJobs}}
+            <div class="job-item">
+                <span class="job-status">
+                    Status:
+                    {{#if completed}}
+                        <i class="fas fa-check text-green"></i>
+                    {{else}}
+                        <i class="fas fa-times text-red"></i>
+                    {{/if}}
+                </span>
+                <a href="/report/{{id}}">
+                    <span>{{desc}}</span>
+                    <small>
+                        <span class="secondary">{{appType}}</span> |
+                        <span class="secondary">{{appAge}} years</span> |
+                        <span class="secondary">{{appMan}}</span>
+                    </small>
+                </a>
+            </div>
+        {{/each}}
+    </div>
 </div>
+
+<div class="modal-overlay" id="report-modal">
+    <div class="modal-window">
+        <div class="modal-header">
+            <p class="modal-header-title">Report a problem</p>
+            <button class="close"><i class="fas fa-times"></i></button>
+        </div>
+        <div class="modal-body">
+            <form action="/report" method="post" class="modal-form">
+                <div class="modal-form-group">
+                    <label for="type">Appliance type</label>
+                    <select name="type" id="type" required>
+                        <option value="" selected>-- Choose --</option>
+                        <option value="oven">Oven</option>
+                        <option value="fridge">Fridge</option>
+                    </select>
+                </div>
+                <div class="modal-form-group">
+                    <label for="age">Appliance age</label>
+                    <select name="age" id="age" required>
+                        <option value="" selected>-- Choose --</option>
+                        <option value="1">1 year</option>
+                        <option value="2">2 years</option>
+                    </select>
+                </div>
+                <div class="modal-form-group">
+                    <label for="manufacturer">Appliance Manufacturer</label>
+                    <select name="manufacturer" id="manufacturer" required>
+                        <option value="" selected>-- Choose --</option>
+                        <option value="bosch">Bosch</option>
+                        <option value="miele">Miele</option>
+                    </select>
+                </div>
+                <div class="modal-form-group">
+                    <label for="desc">Fault description</label>
+                    <textarea name="desc" id="desc"></textarea>
+                </div>
+                <input type="hidden" name="user" value="{{user.id}}">
+                <div class="modal-form-group">
+                    <input type="submit" value="Submit">
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+<script src="../app.js"></script>
 </body>
 </html>
