--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -23,11 +23,11 @@
         {{/if}}
         <div class="form-group">
             <label for="user">Username</label>
-            <input type="text" name="user" value="{{user}}"/>
+            <input type="text" id="user" name="user" value="{{user}}"/>
         </div>
         <div class="form-group">
             <label for="pass">Password</label>
-            <input type="password" name="pass"/>
+            <input type="password" id="pass" name="pass"/>
         </div>
         <div class="form-group">
             <input type="submit" value="Login">
