--- a/public/style.css
+++ b/public/style.css
@@ -118,6 +118,11 @@ body {
     padding: 0 0.5rem 0 0;
 }
 
+.tech-hero button{
+    margin: 0 0 0 1rem;
+    white-space: nowrap;
+}
+
 .container {
     max-width: 1140px;
     min-width: 0;
@@ -289,6 +294,46 @@ body {
     background: rgba(51, 168, 252, 0.05);
 }
 
+/*TECH SUPPORTED*/
+
+.row-wrap{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: flex-start;
+    margin: 0 -0.5rem;
+}
+
+.wrap-list{
+    flex: 1 0 300px;
+    background: white;
+    box-shadow: 0 2px 10px -2px rgba(0, 0, 0, 0.05);
+    margin: 0 0.5rem;
+    border-radius: 5px;
+    padding: 0 2rem 2rem 2rem;
+}
+
+.wrap-list-title {
+    text-align: center;
+    font-size: 1.3rem;
+    text-transform: capitalize;
+    font-weight: 600;
+    color: var(--secondary-font);
+}
+
+.wrap-item{
+    border-bottom: 1px solid #eee;
+}
+
+.wrap-item p{
+    margin: 0;
+    padding: 0.5rem 0 0.5rem 0;
+}
+
+.wrap-item:last-child{
+    border-bottom: none;
+}
+
 /*JOB DETAILS*/
 .go-back{
     text-decoration: none;
@@ -454,6 +499,21 @@ body {
 }
 
 .modal-form-group select:focus {
+    outline: 0;
+    border: 1px solid var(--secondary-bg);
+}
+
+.modal-form-group input {
+    max-width: 350px;
+    min-width: 0;
+    width: 100%;
+    padding: 0.5rem 0;
+    text-indent: 1rem;
+    border: 1px solid #d1d1d1;
+    border-radius: 5px;
+}
+
+.modal-form-group input:focus {
     outline: 0;
     border: 1px solid var(--secondary-bg);
 }
