--- a/views/tech_report.handlebars
+++ b/views/tech_report.handlebars
@@ -50,7 +50,7 @@
             <span> Age: <span class="tag">{{job.appAge}} years</span></span>
             <span> Manufacturer: <span class="tag">{{job.appMan}}</span></span>
         </div>
-        <p class="created">by <span class="secondary">{{user.user}}</span> | created : <span class="secondary">{{job.createdAt}}</span></p>
+        <p class="created">by <span class="secondary">{{jobUser.user}}</span> | created : <span class="secondary">{{job.createdAt}}</span></p>
         <div class="job-desc">
             <p>{{job.desc}}</p>
         </div>
