--- a/views/report.handlebars
+++ b/views/report.handlebars
@@ -17,6 +17,7 @@
         <a class="nav-title" href="/">Domestic Repair</a>
         <ul>
             <li>
+                <img src="../{{user.avatar}}" alt="">
                 Hi, {{user.user}}
             </li>
             <a href="/logout">
