--- a/views/tech_home.handlebars
+++ b/views/tech_home.handlebars
@@ -71,7 +71,7 @@
     <div class="row-wrap">
         <div class="wrap-list">
             <p class="wrap-list-title">Supported Appliances</p>
-            {{#each appliances}}
+            {{#each extra.appliances}}
                 <div class="wrap-item">
                     <p>{{type}}</p>
                 </div>
@@ -80,7 +80,7 @@
         <br>
         <div class="wrap-list">
             <p class="wrap-list-title">Supported Manufacturers</p>
-            {{#each manufacturers}}
+            {{#each extra.manufacturers}}
                 <div class="wrap-item">
                     <p>{{name}}</p>
                 </div>
