--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -16,15 +16,15 @@
         <p class="form-title">Register</p>
         <div class="form-group">
             <label for="user">Username</label>
-            <input id="user" type="text" name="user"/>
+            <input id="user" type="text" name="user" required/>
         </div>
         <div class="form-group">
             <label for="pass">Password</label>
-            <input id="pass" type="password" name="pass"/>
+            <input id="pass" type="password" name="pass" required/>
         </div>
         <div class="form-group">
             <label for="avatar">Profile Picture</label>
-            <input type="file" name="avatar"/>
+            <input type="file" name="avatar" required/>
         </div>
         <div class="form-group">
             <input type="submit" value="Register">
