added all intermediate tasks (Mail, timeslots, separation from all and technician tasks, max assigned 3 tasks)

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -17,13 +17,12 @@
         {{#if error}}
             <p class="error">{{error}}</p>
         {{/if}}
-        {{log  error}}
         {{#if success}}
             <p class="success">{{success}}</p>
         {{/if}}
         <div class="form-group">
             <label for="user">Username</label>
-            <input type="text" id="user" name="user" value="{{user}}"/>
+            <input type="text" id="user" name="user"/>
         </div>
         <div class="form-group">
             <label for="pass">Password</label>
