--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -19,6 +19,10 @@
             <input id="user" type="text" name="user" required/>
         </div>
         <div class="form-group">
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email"/>
+        </div>
+        <div class="form-group">
             <label for="pass">Password</label>
             <input id="pass" type="password" name="pass" required/>
         </div>
