--- a/views/tech_login.handlebars
+++ b/views/tech_login.handlebars
@@ -17,13 +17,9 @@
         {{#if error}}
             <p class="error">{{error}}</p>
         {{/if}}
-        {{log  error}}
-        {{#if success}}
-            <p class="success">{{success}}</p>
-        {{/if}}
         <div class="form-group">
             <label for="user">Username</label>
-            <input id="user" type="text" name="user" value="{{user}}"/>
+            <input id="user" type="text" name="user"/>
         </div>
         <div class="form-group">
             <label for="pass">Password</label>
