--- a/public/style.css
+++ b/public/style.css
@@ -3,7 +3,10 @@
     --secondary-bg: #33a8fc;
     --primary-font: #333;
     --secondary-font: #545454;
+    --success: rgba(0, 175, 0, 1);
 }
+
+/*DEFAULT*/
 
 html {
     font-size: 14px;
@@ -20,6 +23,30 @@ body {
     background: #f1f1f1;
     margin: 0;
     color: var(--primary-font);
+}
+
+.container {
+    max-width: 1140px;
+    min-width: 0;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 1rem;
+}
+
+.bg-green{
+    background: var(--success) !important;
+}
+
+.text-white{
+    color: white !important;
+}
+
+.text-center{
+    text-align: center !important;
+}
+
+.go-right{
+    float: right;
 }
 
 .badge {
@@ -57,18 +84,18 @@ body {
     color: #fff;
 }
 
-.navbar .nav-container {
+.nav-container {
     display: flex;
     align-items: center;
 }
 
-.navbar .nav-container .nav-title {
+.nav-container .nav-title {
     color: #f1f1f1;
     text-decoration: none;
     font-size: 1.5rem;
 }
 
-.navbar .nav-container ul {
+.nav-container ul {
     margin: 0 0 0 auto;
     padding: 0;
     list-style-type: none;
@@ -76,25 +103,25 @@ body {
     align-items: center;
 }
 
-.navbar .nav-container ul a {
+.nav-container ul a {
     color: #f1f1f1;
     text-decoration: none;
     font-weight: 400;
 }
 
-.navbar .nav-container ul a li {
+.nav-container ul a li {
     pointer-events: auto;
     padding: 1.25rem;
 }
 
-.navbar .nav-container ul li {
+.nav-container ul li {
     pointer-events: none;
     display: flex;
     align-items: center;
     padding: 0.5rem 1rem;
 }
 
-.navbar .nav-container ul li img{
+.nav-container ul li img{
     display: inline-block;
     width: 2rem;
     height: 2rem;
@@ -104,7 +131,7 @@ body {
     border: 2px solid white
 }
 
-.navbar .nav-container ul li:hover {
+.nav-container ul li:hover {
     background: rgba(0, 0, 0, 0.15);
 }
 
@@ -119,7 +146,7 @@ body {
 }
 
 .hero-section button {
-    background: rgba(0, 175, 0, 1);
+    background: var(--success);
     color: #fff;
     border: none;
     border-radius: 5px;
@@ -135,14 +162,6 @@ body {
 .tech-hero button{
     margin: 0 0 0 1rem;
     white-space: nowrap;
-}
-
-.container {
-    max-width: 1140px;
-    min-width: 0;
-    width: 100%;
-    margin: 0 auto;
-    padding: 0 1rem;
 }
 
 /*USER FORM*/
@@ -258,9 +277,10 @@ body {
     display: flex;
     align-items: center;
     flex-wrap: wrap;
-    width: 100%;
+    width: 90%;
     text-decoration: none;
     padding: 1rem 0;
+
 }
 
 .job-item .completed{
@@ -276,12 +296,6 @@ body {
 
 .job-item .completed i {
     padding: 0 0 0 0.5rem;
-    color: rgba(0, 150, 0, 0.9);
-}
-
-.job-item .completed a i {
-    padding: 0 0 0 0.5rem;
-    color: rgba(150, 0, 0, 0.9);
 }
 
 .job-item a span {
@@ -289,6 +303,7 @@ body {
     color: var(--primary-font);
     max-width: 100vw;
     overflow: hidden;
+    white-space: nowrap;
     text-overflow: ellipsis;
 }
 
@@ -562,6 +577,7 @@ body {
     cursor: pointer;
 }
 
+/*RESPONSIVENESS*/
 
 @media (max-width: 991px) {
     .container {
