--- a/views/tech_add.handlebars
+++ b/views/tech_add.handlebars
@@ -19,6 +19,10 @@
             <input id="user" type="text" name="user"/>
         </div>
         <div class="form-group">
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email"/>
+        </div>
+        <div class="form-group">
             <label for="pass">Password</label>
             <input id="pass" type="password" name="pass"/>
         </div>
