--- a/views/tech_home.handlebars
+++ b/views/tech_home.handlebars
@@ -43,9 +43,17 @@
         <button id="add-manufacturer"><i class="far fa-copyright"></i> Add Supported Manufacturer</button>
     </div>
     <div class="job-list">
-        <p class="job-list-title"><i class="fas fa-clipboard-list"></i> all jobs</p>
+        <p class="job-list-title"><i class="fas fa-clipboard-list"></i> available jobs</p>
         {{#each jobs}}
             <div class="job-item">
+                 <span class="job-status">
+                    Status:
+                     {{#if completed}}
+                         <i class="fas fa-check text-green"></i>
+                     {{else}}
+                         <i class="fas fa-times text-red"></i>
+                     {{/if}}
+                </span>
                 <a href="/tech/report/{{id}}">
                     <span>{{desc}}</span>
                     <small>
@@ -54,23 +62,37 @@
                         <span class="secondary">{{appMan}}</span>
                     </small>
                 </a>
-            <button class="completed">
-                Completed:
-                {{#if completed}}
-                    <i class="fas fa-thumbs-up"></i>
-                {{else}}
-                    <a href="/tech/check/{{id}}">
-                        <i class="far fa-thumbs-up"></i>
-                    </a>
-                {{/if}}
-                </button>
+            </div>
+        {{/each}}
+    </div>
+    <br>
+    <div class="job-list">
+        <p class="job-list-title"><i class="fas fa-clipboard-list"></i> your jobs</p>
+        {{#each techJobs}}
+            <div class="job-item">
+                <span class="job-status">
+                    Status:
+                    {{#if completed}}
+                        <i class="fas fa-check text-green"></i>
+                    {{else}}
+                        <i class="fas fa-times text-red"></i>
+                    {{/if}}
+                </span>
+                <a href="/tech/report/{{id}}">
+                    <span>{{desc}}</span>
+                    <small>
+                        <span class="secondary">{{appType}}</span> |
+                        <span class="secondary">{{appAge}} years</span> |
+                        <span class="secondary">{{appMan}}</span>
+                    </small>
+                </a>
             </div>
         {{/each}}
     </div>
     <br>
     <div class="row-wrap">
         <div class="wrap-list">
-            <p class="wrap-list-title">Supported Appliances</p>
+            <p class="wrap-list-title">All Supported Appliances</p>
             {{#each extra.appliances}}
                 <div class="wrap-item">
                     <p>{{type}}</p>
@@ -79,7 +101,7 @@
         </div>
         <br>
         <div class="wrap-list">
-            <p class="wrap-list-title">Supported Manufacturers</p>
+            <p class="wrap-list-title">All Supported Manufacturers</p>
             {{#each extra.manufacturers}}
                 <div class="wrap-item">
                     <p>{{name}}</p>
@@ -100,7 +122,7 @@
             <form action="/tech/manufacturer" method="post" class="modal-form">
                 <div class="modal-form-group">
                     <label for="name">Manufacturer Name</label>
-                    <input name="name" id="name" required>
+                    <input name="name" id="name" type="text" required>
                 </div>
                 <div class="modal-form-group">
                     <input type="submit" value="Submit">
@@ -121,7 +143,7 @@
             <form action="/tech/appliance" method="post" class="modal-form">
                 <div class="modal-form-group">
                     <label for="type">Appliance Type</label>
-                    <input name="type" id="type" required>
+                    <input name="type" id="type" type="text" required>
                 </div>
                 <div class="modal-form-group">
                     <input type="submit" value="Submit">
