--- a/views/tech_report.handlebars
+++ b/views/tech_report.handlebars
@@ -31,30 +31,99 @@
     </div>
 </nav>
 <div class="container">
+    {{#if success}}
+        <p class="success">{{success}}</p>
+    {{/if}}
+    {{#if error}}
+        <p class="error">{{error}}</p>
+    {{/if}}
     <a href="/tech/dashboard" class="go-back">
         <button><i class="fas fa-arrow-left"></i> Go Back</button>
     </a>
-    <a href="/tech/check/{{job.id}}" class="mark-completed">
-        <button>
-            Completed:
+    {{#if job.assignedTo}}
+        <a href="/tech/check/{{job.id}}" class="mark-completed">
             {{#if job.completed}}
-                <i class="fas fa-thumbs-up text-green"></i>
+                <button class="go-right">
+                    Completed <i class="fas fa-thumbs-up text-green"></i>
+                </button>
             {{else}}
-                <i class="far fa-thumbs-up text-red"></i>
+                <button class="bg-green text-white go-right">
+                    Mark Completed
+                </button>
             {{/if}}
-        </button>
-    </a>
+        </a>
+    {{else}}
+        <span class="mark-completed" id="quote">
+            <button class="bg-green text-white go-right">
+                Provide Quote
+            </button>
+        </span>
+    {{/if}}
     <div class="job-details">
         <div class="keywords">
             <span> Appliance: <span class="tag">{{job.appType}}</span></span>
             <span> Age: <span class="tag">{{job.appAge}} years</span></span>
             <span> Manufacturer: <span class="tag">{{job.appMan}}</span></span>
         </div>
-        <p class="created">by <span class="secondary">{{jobUser.user}}</span> | created : <span class="secondary">{{job.createdAt}}</span></p>
+        <p class="created">by <span class="secondary">{{jobUser.user}}</span> | created : <span
+                class="secondary">{{job.createdAt}}</span></p>
         <div class="job-desc">
             <p>{{job.desc}}</p>
         </div>
     </div>
+    <br>
+    {{#if job.assignedTo}}
+        <div class="job-details">
+            <h3 class="text-center">Quote</h3>
+            <div class="keywords">
+                <span> Price: <span class="tag">£ {{job.price}}</span></span>
+                <span> Booked Date: <span class="tag">{{job.executionDate}}</span></span>
+                <span> Booked Time-Slot: <span class="tag">{{job.executionTime}}</span></span>
+            </div>
+            <p class="created">
+                A technician will come to the premises to execute the repair. His name is <span class="secondary">{{tech.user}}</span>.
+                <br>
+                Please do not let them in before they have identified themselves. <br>
+                <strong>We do not take responsibility if you get killed by someone other than our employee</strong>
+            </p>
+        </div>
+    {{/if}}
 </div>
+
+<div class="modal-overlay" id="quote-modal">
+    <div class="modal-window">
+        <div class="modal-header">
+            <p class="modal-header-title">Provide Quote</p>
+            <button class="close quote"><i class="fas fa-times"></i></button>
+        </div>
+        <div class="modal-body">
+            <form action="/tech/quote/{{job.id}}" method="post" class="modal-form">
+                <div class="modal-form-group">
+                    <label for="invoice">Job Cost £</label>
+                    <input name="invoice" id="invoice" type="number" required>
+                </div>
+                <div class="modal-form-group">
+                    <label for="exec-date">Execution Date</label>
+                    <input name="execDate" id="exec-date" type="date" required>
+                </div>
+                <div class="modal-form-group">
+                    <label for="exec-time">Execution Time</label>
+                    <select name="execTime" id="exec-time" required>
+                        <option value="" selected>-- Choose Time Block --</option>
+                        <option value="8:00 - 10:00">8:00 - 10:00</option>
+                        <option value="10:00 - 12:00">10:00 - 12:00</option>
+                        <option value="13:00 - 15:00">13:00 - 15:00</option>
+                        <option value="15:00 - 17:00">15:00 - 17:00</option>
+                    </select>
+                </div>
+                <div class="modal-form-group">
+                    <input type="submit" value="Submit">
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+<script src="../../app.js"></script>
 </body>
 </html>
