--- a/views/tech_report.handlebars
+++ b/views/tech_report.handlebars
@@ -40,9 +40,9 @@
     <a href="/tech/dashboard" class="go-back">
         <button><i class="fas fa-arrow-left"></i> Go Back</button>
     </a>
-    {{#if job.assignedTo}}
+    {{#if job.assigned}}
         <a href="/tech/check/{{job.id}}" class="mark-completed">
-            {{#if job.completed}}
+            {{#if job.status}}
                 <button class="go-right">
                     Completed <i class="fas fa-thumbs-up text-green"></i>
                 </button>
@@ -53,11 +53,19 @@
             {{/if}}
         </a>
     {{else}}
-        <span class="mark-completed" id="quote">
-            <button class="bg-green text-white go-right">
-                Provide Quote
-            </button>
-        </span>
+        {{# if job.quoteId}}
+            <span class="mark-completed">
+                <button class="bg-blue text-white go-right disabled">
+                    Pending Approval
+                </button>
+            </span>
+        {{else}}
+            <span class="mark-completed" id="quote">
+                <button class="bg-green text-white go-right">
+                    Provide Quote
+                </button>
+            </span>
+        {{/if}}
     {{/if}}
     <div class="job-details">
         <div class="keywords">
@@ -65,26 +73,36 @@
             <span> Age: <span class="tag">{{job.appAge}} years</span></span>
             <span> Manufacturer: <span class="tag">{{job.appMan}}</span></span>
         </div>
-        <p class="created">by <span class="secondary">{{jobUser.user}}</span> | created : <span
+        <p class="created">by <span class="secondary">{{jobUser.user}}</span> | created: <span
                 class="secondary">{{job.createdAt}}</span></p>
         <div class="job-desc">
             <p>{{job.desc}}</p>
         </div>
+        <span id="jobLat" style="opacity: 0; pointer-events: none">{{job.lat}}</span><span id="jobLng" style="opacity: 0; pointer-events: none">{{job.lng}}</span>
+        <div id="jobMap"></div>
     </div>
     <br>
-    {{#if job.assignedTo}}
+    {{#if quote}}
         <div class="job-details">
             <h3 class="text-center">Quote</h3>
             <div class="keywords">
-                <span> Price: <span class="tag">£ {{job.price}}</span></span>
-                <span> Booked Date: <span class="tag">{{job.executionDate}}</span></span>
-                <span> Booked Time-Slot: <span class="tag">{{job.executionTime}}</span></span>
+                <span> Price: <span class="tag">£ {{quote.price}}</span></span>
+                <span> Booked Date: <span class="tag">{{quote.executionDate}}</span></span>
+                <span> Booked Time-Slot: <span class="tag">{{quote.executionTime}}</span></span>
             </div>
-            <p class="created">
-                A technician will come to the premises to execute the repair. His name is <span class="secondary">{{tech.user}}</span>.
-                <br>
-                Please do not let them in before they have identified themselves. <br>
-                <strong>We do not take responsibility if you get killed by someone other than our employee</strong>
+        <p class="created">
+            A technician will come to the premises to execute the repair. His name is <span
+                class="secondary">{{tech.user}}</span>.
+            <br>
+            Please do not let them in before they have identified themselves. <br>
+            <strong>We do not take responsibility if you get killed by someone other than our employee</strong>
+
+            <br><br>
+            {{#if quote.approved}}
+                <p class="text-green">User has accepted the offer! Please proceed to repair.</p>
+            {{else}}
+                <h4 class="text-center">Waiting for user confirmation</h4>
+            {{/if}}
             </p>
         </div>
     {{/if}}
@@ -99,16 +117,16 @@
         <div class="modal-body">
             <form action="/tech/quote/{{job.id}}" method="post" class="modal-form">
                 <div class="modal-form-group">
-                    <label for="invoice">Job Cost £</label>
-                    <input name="invoice" id="invoice" type="number" required>
+                    <label for="price">Job Cost £</label>
+                    <input name="price" id="price" type="number" required>
                 </div>
                 <div class="modal-form-group">
                     <label for="exec-date">Execution Date</label>
-                    <input name="execDate" id="exec-date" type="date" required>
+                    <input name="date" id="exec-date" type="date" required>
                 </div>
                 <div class="modal-form-group">
                     <label for="exec-time">Execution Time</label>
-                    <select name="execTime" id="exec-time" required>
+                    <select name="time" id="exec-time" required>
                         <option value="" selected>-- Choose Time Block --</option>
                         <option value="8:00 - 10:00">8:00 - 10:00</option>
                         <option value="10:00 - 12:00">10:00 - 12:00</option>
@@ -125,5 +143,24 @@
 </div>
 
 <script src="../../app.js"></script>
+<script>
+    function initMap() {
+        let latInput = document.getElementById('jobLat').innerText
+        let lngInput = document.getElementById('jobLng').innerText
+        const mapOptions = {
+            zoom: 14,
+            center: new google.maps.LatLng(latInput, lngInput)
+        }
+        const map = new google.maps.Map(document.getElementById('jobMap'), mapOptions)
+        let marker = new google.maps.Marker({
+            position: mapOptions.center,
+            map: map,
+            draggable: false
+        })
+        map.setCenter(marker.position)
+    }
+</script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyClh5B6yiEc3qd754g2pItmh_FcgXAUr3E&callback=initMap"
+        async defer></script>
 </body>
 </html>
